--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.504.0",
     "@aws-sdk/client-sns": "^3.501.0",
     "@aws-sdk/client-sqs": "^3.504.0",
     "@types/express": "^4.17.21",
