--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-rekognition": "^3.513.0",
     "@aws-sdk/client-s3": "^3.504.0",
     "@aws-sdk/client-sns": "^3.501.0",
     "@aws-sdk/client-sqs": "^3.504.0",
     "@types/express": "^4.17.21",
+    "@types/he": "^1.2.3",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/passport": "^1.0.16",
@@ -27,9 +29,11 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "he": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.28.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "ts-node": "^10.9.2"
