--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/client-s3": "^3.504.0",
     "@aws-sdk/client-sns": "^3.501.0",
     "@aws-sdk/client-sqs": "^3.504.0",
+    "@googlemaps/google-maps-services-js": "^3.3.42",
     "@types/express": "^4.17.21",
     "@types/he": "^1.2.3",
     "@types/jsonwebtoken": "^9.0.5",
